libmongoc 2.2.0 (unreleased)
============================

## Notes

* Raise required version of libmongocrypt from 1.13.0 to 1.15.0 to support In-Use Encryption (corresponds to the CMake option: `ENABLE_CLIENT_SIDE_ENCRYPTION`).

## Deprecated

- Support for macOS 11 (EOL since September 2023) and macOS 12 (EOL since September 2024).

libmongoc 2.1.2
===============

## Fixes

* Fix write command options handling.

Thanks to everyone who contributed to the development of this release.

  * Ezra Chung
  * Kevin Albertson


libmongoc 1.30.6
================

Fixes:

  * Fix write command options handling.

Thanks to everyone who contributed to the development of this release.

  * Ezra Chung
  * Kevin Albertson


libmongoc 2.1.1
===============

## Fixes

* Do not propagate `-fPIC` in CMake targets.
* Apply write command behavior to `mongoc_collection_create_indexes_with_opts`.
* Omit `saslSupportedMechs` in single-threaded monitoring commands.

Thanks to everyone who contributed to the development of this release.

  * Julia Garland
  * Roberto C. Sánchez



libmongoc 2.1.0
===============

## Fixes

* Windows Secure Channel is fixed to support newer signatures to verify client certificates.
* Replace use of `rand()` with thread-safe alternatives.
* The uninstall script for Windows is fixed so it no longer "succeeds" with a non-zero `%ERRORLABEL%` value.
* The uninstall script for non-Windows environments now calls `find "$dir" -maxdepth 1` instead of `ls --almost-all "$dir"` when detecting non-empty directories to fix macOS compatibility.

## Improvements

* Remove unhelpful long-lived buffers to reduce memory usage.
* Improve error messages produced by Windows APIs.

## Notes

* The minimum supported MongoDB Server version is raised from 4.0 to 4.2. This is in accordance with [MongoDB Software Lifecycle Schedules](https://www.mongodb.com/legal/support-policy/lifecycles).

## Changes
