@@ -23,8 +23,6 @@ class Distro(BaseModel):
     os_ver: str | None = None
     vs_ver: (
         Literal[
-            '2013',
-            '2015',
             '2017',
             '2019',
             '2022',
@@ -179,8 +177,6 @@ def make_distro_str(distro_name, compiler, arch) -> str:
 
 def to_cc(compiler):
     return {
-        'vs2015x64': 'Visual Studio 14 2015',
-        'vs2015x86': 'Visual Studio 14 2015',
         'vs2017x64': 'Visual Studio 15 2017',
         'vs2017x86': 'Visual Studio 15 2017',
         'vs2019x64': 'Visual Studio 16 2019',
@@ -192,8 +188,6 @@ def to_cc(compiler):
 
 def to_platform(compiler):
     return {
-        'vs2015x64': 'x64',
-        'vs2015x86': 'Win32',
         'vs2017x64': 'x64',
         'vs2017x86': 'Win32',
         'vs2019x64': 'x64',
