@@ -3397,57 +3397,6 @@ tasks:
       - func: bootstrap-mongo-orchestration
       - func: run-mock-kms-servers
       - func: run-tests
-  - name: cse-sasl-cyrus-winssl-windows-2019-vs2015-x64-compile
-    run_on: windows-vsCurrent-large
-    tags: [cse-matrix-winssl, compile, windows-vsCurrent, vs2015x64, cse, sasl-cyrus]
-    commands:
-      - func: cse-sasl-cyrus-winssl-compile
-        vars:
-          CMAKE_GENERATOR: Visual Studio 14 2015
-          CMAKE_GENERATOR_PLATFORM: x64
-      - func: upload-build
-  - name: cse-sasl-cyrus-winssl-windows-2019-vs2015-x64-test-4.2-sharded-auth
-    run_on: windows-vsCurrent-small
-    tags: [cse-matrix-winssl, test, windows-vsCurrent, vs2015x64, sasl-cyrus, cse, auth, sharded, "4.2", winssl]
-    depends_on: [{ name: cse-sasl-cyrus-winssl-windows-2019-vs2015-x64-compile }]
-    commands:
-      - func: fetch-build
-        vars:
-          BUILD_NAME: cse-sasl-cyrus-winssl-windows-2019-vs2015-x64-compile
-      - command: expansions.update
-        params:
-          updates:
-            - { key: CMAKE_GENERATOR, value: Visual Studio 14 2015 }
-            - { key: CMAKE_GENERATOR_PLATFORM, value: x64 }
-            - { key: AUTH, value: auth }
-            - { key: MONGODB_VERSION, value: "4.2" }
-            - { key: TOPOLOGY, value: sharded_cluster }
-            - { key: SSL, value: winssl }
-      - func: fetch-det
-      - func: bootstrap-mongo-orchestration
-      - func: run-mock-kms-servers
-      - func: run-tests
-  - name: cse-sasl-cyrus-winssl-windows-2019-vs2015-x64-test-latest-sharded-auth
-    run_on: windows-vsCurrent-small
-    tags: [cse-matrix-winssl, test, windows-vsCurrent, vs2015x64, sasl-cyrus, cse, auth, sharded, latest, winssl]
-    depends_on: [{ name: cse-sasl-cyrus-winssl-windows-2019-vs2015-x64-compile }]
-    commands:
-      - func: fetch-build
-        vars:
-          BUILD_NAME: cse-sasl-cyrus-winssl-windows-2019-vs2015-x64-compile
-      - command: expansions.update
-        params:
-          updates:
-            - { key: CMAKE_GENERATOR, value: Visual Studio 14 2015 }
-            - { key: CMAKE_GENERATOR_PLATFORM, value: x64 }
-            - { key: AUTH, value: auth }
-            - { key: MONGODB_VERSION, value: latest }
-            - { key: TOPOLOGY, value: sharded_cluster }
-            - { key: SSL, value: winssl }
-      - func: fetch-det
-      - func: bootstrap-mongo-orchestration
-      - func: run-mock-kms-servers
-      - func: run-tests
   - name: cse-sasl-cyrus-winssl-windows-2019-vs2022-x64-compile
     run_on: windows-vsCurrent-large
     tags: [cse-matrix-winssl, compile, windows-vsCurrent, vs2022x64, cse, sasl-cyrus]
@@ -5853,15 +5802,6 @@ tasks:
           CMAKE_GENERATOR: Visual Studio 15 2017
           CMAKE_GENERATOR_PLATFORM: x64
       - func: upload-build
-  - name: sasl-off-winssl-windows-2019-vs2015-x64-compile
-    run_on: windows-vsCurrent-large
-    tags: [sasl-matrix-winssl, compile, windows-vsCurrent, vs2015x64, sasl-off]
-    commands:
-      - func: sasl-off-winssl-compile
-        vars:
-          CMAKE_GENERATOR: Visual Studio 14 2015
-          CMAKE_GENERATOR_PLATFORM: x64
-      - func: upload-build
   - name: sasl-off-winssl-windows-2019-vs2017-x64-compile
     run_on: windows-vsCurrent-large
     tags: [sasl-matrix-winssl, compile, windows-vsCurrent, vs2017x64, sasl-off]
@@ -5949,15 +5889,6 @@ tasks:
       - func: bootstrap-mongo-orchestration
       - func: run-simple-http-server
       - func: run-tests
-  - name: sasl-sspi-winssl-windows-2019-vs2015-x64-compile
-    run_on: windows-vsCurrent-large
-    tags: [sasl-matrix-winssl, compile, windows-vsCurrent, vs2015x64, sasl-sspi]
-    commands:
-      - func: sasl-sspi-winssl-compile
-        vars:
-          CMAKE_GENERATOR: Visual Studio 14 2015
-          CMAKE_GENERATOR_PLATFORM: x64
-      - func: upload-build
   - name: sasl-sspi-winssl-windows-2019-vs2017-x64-compile
     run_on: windows-vsCurrent-large
     tags: [sasl-matrix-winssl, compile, windows-vsCurrent, vs2017x64, sasl-sspi]
@@ -6681,15 +6612,6 @@ tasks:
           CC: gcc-13
           CXX: g++-13
           C_STD_VERSION: 11
-  - name: std-c11-windows-2019-vs2015-x64-compile
-    run_on: windows-vsCurrent-large
-    tags: [std-matrix, windows-vsCurrent, vs2015x64, compile, std-c11]
-    commands:
-      - func: std-compile
-        vars:
-          CMAKE_GENERATOR: Visual Studio 14 2015
-          CMAKE_GENERATOR_PLATFORM: x64
-          C_STD_VERSION: 11
   - name: std-c11-windows-2019-vs2017-x64-compile
     run_on: windows-vsCurrent-large
     tags: [std-matrix, windows-vsCurrent, vs2017x64, compile, std-c11]
@@ -7202,15 +7124,6 @@ tasks:
         vars:
           CC: gcc-13
           CXX: g++-13
-          C_STD_VERSION: 99
-  - name: std-c99-windows-2019-vs2015-x64-compile
-    run_on: windows-vsCurrent-large
-    tags: [std-matrix, windows-vsCurrent, vs2015x64, compile, std-c99]
-    commands:
-      - func: std-compile
-        vars:
-          CMAKE_GENERATOR: Visual Studio 14 2015
-          CMAKE_GENERATOR_PLATFORM: x64
           C_STD_VERSION: 99
   - name: std-c99-windows-2019-vs2017-x64-compile
     run_on: windows-vsCurrent-large
